补充作业目标

--- a/3122004484/第一次个人编程作业/第一次个人编程作业.md
+++ b/3122004484/第一次个人编程作业/第一次个人编程作业.md
@@ -1,10 +1,12 @@
 | 这个作业属于哪个课程 |https://edu.cnblogs.com/campus/gdgy/CSGrade22-34|
 | ----------------- |--------------- |
 | 这个作业要求在哪里| https://edu.cnblogs.com/campus/gdgy/CSGrade22-34/homework/13229|
-| 这个作业的目标 | |
+| 这个作业的目标 | 1.熟悉软件开发流程<br />2. 提高代码编程能力<br />3. 掌握代码质量分析、性能分析的方法<br />4. 掌握项目单元测试的方法<br />5. 了解测试覆盖率 |
 
 [Github链接](https://github.com/LiChao258932589/LiChao258932589/tree/main/3122004484)
+
 # 一、PSP表格
+
 | PSP2.1                        | Personal Software Process Stages | 预估耗时（分钟） | 实际耗时（分钟） |
 | --------------------------------------- | ------------------------------------------ | -------------------------- | -------------------------- |
 | Planning                                | 计划                                       | 30 | 35 |
